--- a/steins_gate_0/docs/0077.md
+++ b/steins_gate_0/docs/0077.md
@@ -110,7 +110,7 @@
 “……两个不适合社会生活的人聚在一起，就会制造出这样的空间吗……”  
 “这是主观差异哦。不如说，这是最适合从事智力生产活动的生活空间……希望你这么说呢。”  
 “……哈。”  
-我所怀有的不安，果然是杞人忧天。至少，萌郁没有对比屋定抱有敌意，比屋定看来也很享受和萌郁共同生活。两人和谐友好地一起选了家具，简直可以说是令人欣慰的景象了。过来瞧瞧情况是值得的，看来今夜可以好好睡一觉了呢。  
+我所怀有的不安，果然是杞人忧天。至少，桐生萌郁没有对比屋定抱有敌意，比屋定看来也很享受和桐生萌郁共同生活。两人和谐友好地一起选了家具，简直可以说是令人欣慰的景象了。过来瞧瞧情况是值得的，看来今夜可以好好睡一觉了呢。  
 
 
 <br/>
