--- a/steins_gate_0/docs/0038.md
+++ b/steins_gate_0/docs/0038.md
@@ -10,15 +10,15 @@
 正在咖啡店看书时，手机响起了RINE的消息提示音。  
 
 『嘟嘟噜~♪现在在哪？』  
-![](../pics/emojis/Okarin-hecha.png)  
+「![](../pics/emojis/Okarin-hecha.png)」  
 『啊，老地方的咖啡店啊  
- 刚才去了冈伦的家，你不在』  
+ 刚才去了冈伦家，你不在』  
 「你去我家了啊，老爸没有给你添麻烦吧？」  
 『没有哟，还款待了麦茶  
  我有些必须要买的东西，能陪我吗？』  
-![](../pics/emojis/Okarin-OK.png)  
-![](../pics/emojis/Faris-thanks.png)  
-『那我现在就过去，在那等我哦』  
+「![](../pics/emojis/Okarin-OK.png)」  
+『![](../pics/emojis/Faris-thanks.png)  
+ 那我现在就过去，在那等我哦』  
 
 那家伙，去过我家了啊……  
 我的老家【冈部青果店】，是古老的商业街中的一家破旧的店，差不多建成有40年了。残破得很，是时候重新装修一下比较好。  
