--- a/steins_gate_0/docs/0059.md
+++ b/steins_gate_0/docs/0059.md
@@ -97,9 +97,9 @@
 
 这时，突如其来的来电铃声打断了我的思考。现在在讨论重要的事情，平时的话，我都会暂时无视掉，之后再回电的——偏偏这个时候，我不知为何感觉一定要接这通电话。  
 “抱歉，我接个电话。”  
-“喂？”
+“喂？”  
 “喂，冈部先生！？我是比屋定！”  
-比屋定的声音非常急促，让紧张感急速地升高，我的音量也不禁提高。、
+比屋定的声音非常急促，让紧张感急速地升高，我的音量也不禁提高。  
 “怎么了，比屋定小姐——”  
 “我现在就在你的LAB的附近——！”  
 之后，听到了什么东西摩擦的声音和撞击的声音。  
