--- a/steins_gate_0/docs/0060.md
+++ b/steins_gate_0/docs/0060.md
@@ -150,7 +150,7 @@
 『呐，冈伦今天准备什么时候回家？』  
 「嗯？有什么事吗？」  
 『遇到伯母了，晚饭拜托给我了~』  
-![](../pics/emojis/Okarin-ha.png)  
+「![](../pics/emojis/Okarin-ha.png)」  
 『伯母被叫去商店街的会议了，正在烦恼晚饭该怎么办  
  我说“由真由氏来做吧~”，伯母说“拜托了——”』  
 「没问题吗？真由理你也很忙吧，不要勉强」  
