--- a/steins_gate_0/docs/0063.md
+++ b/steins_gate_0/docs/0063.md
@@ -144,7 +144,7 @@
  我这边后来也在调查那群在找椎名篝的家伙。  
  完全打探不到消息，说不定，对手可能相当强大』  
 「拜托你继续这方面的追查」  
-![](../pics/emojis/Okarin-OK.png)
+『![](../pics/emojis/Okarin-OK.png)』  
 
 桐生萌郁那边就先这样吧。但是……还是很在意那群在找篝的家伙，还有发现篝时她昏倒的事，她为什么会昏倒在那种山里？而且，手中仅有一个她最珍惜的乌帕。难不成，篝是从什么人的手下逃出来的？  
 “琉华子，我有事想跟你说。”  
