--- a/steins_gate_0/docs/0072.md
+++ b/steins_gate_0/docs/0072.md
@@ -14,23 +14,23 @@
  羽毛球想打得更好』  
 「既然说第一个，就是说还有第二个咯？」  
 『第二个是  
- 格斗游戏想玩得更好』  
-![](../pics/emojis/Mayuri-heart.png)  
+ 格斗游戏想玩得更好  
+![](../pics/emojis/Mayuri-heart.png)』  
 『第三个是』  
-![](../pics/emojis/Upa-shock.png)  
-『想让显像管工房变得更时尚』  
-![](../pics/emojis/Mayuri-heart.png)  
+「![](../pics/emojis/Upa-shock.png)」  
+『想让显像管工房变得更时尚  
+![](../pics/emojis/Mayuri-heart.png)』  
 『第四个是  
  想要个望远镜』  
 「这算是梦想吗？」  
 『说是最近为了能看星星在期待呢~』  
 「是不是受了真由理的影响呢」  
-![](../pics/emojis/Bear-zenyang.png)  
+『![](../pics/emojis/Bear-zenyang.png)』  
 『她好像也对宇宙充满了兴趣  
  绹酱，好厉害呢。是非常坚强的女孩子』  
 「是啊」  
 『啊，真由氏也已经不要紧了！』  
-![](../pics/emojis/Taru-gandong.png)  
+「![](../pics/emojis/Taru-gandong.png)」  
 
 
 袭击事件发生后的第二天。我比约定好的时间稍微早到了一点，但对方的身影已经出现在那里。  
