--- a/steins_gate_0/docs/0078.md
+++ b/steins_gate_0/docs/0078.md
@@ -1,4 +1,4 @@
->_<big> ** 存在证明的自动机械- 04** </big>  
+> <big> ** 存在证明的自动机械- 04** </big>  
 > 1.081163  
 > [ 2011/01/03 ] 由于萌郁实在不善言辞，冈伦加入采访。真帆用介绍了人工智能发展的现状，并通过实验解释了框架问题。  
 
@@ -53,7 +53,7 @@
 “别抬举我了，我这种日本大学生随处可见啊。”  
 “开玩笑啦，但是我确实认为你能胜任。”  
 “不，但是……”  
-『我也拜托你了！！>_<  
+『我也拜托你了！！（>_<）  
  不是很多的话，我也可以付打工费给你  
  ![](../pics/emojis/Moeka-thanks.png)（x3）』  
 “呃……”  
