--- a/steins_gate_0/docs/0019.md
+++ b/steins_gate_0/docs/0019.md
@@ -2,7 +2,9 @@
 > 1.129848  
 > [ 2010/12/15 ] 第一次测试报告，冈伦放弃测试员身份，暂时保留登录权限。与真帆聊起红莉栖死后发生的异常事件，真帆想要了解真相被搪塞。  
 
+
 “我想……放弃测试员身份。”  
+![](../pics/0019-1.png)
 这样说出口后，雷斯吉宁教授和比屋定真帆都一副诧异的表情看着我。  
 会面的地点定在市内的高级酒店的其中一间房间。就像秘密会谈一样，就是大片里常有的那种情景——至于为什么这么想，大概是因为中二病的残渣一类的东西还留在我的身体中吧。  
 “突然说出这种话……太不负责任了！”  
