--- a/steins_gate_0/docs/0034.md
+++ b/steins_gate_0/docs/0034.md
@@ -16,7 +16,7 @@
 “那个地方。你明白的吧？”  
 刚才一直挂在比屋定脸上的笑容消失了。向我的眼神很认真，看来是再三思考后做好了觉悟。那个地方，指的是哪里，我马上理解了。  
 “带我去……广播会馆吧。”  
-我们来到了广播会馆。比屋定想要来这里代表着什么，我也立即就理解了。因为这里是，牧濑红莉栖逝世的地方。在那之后我也到过很多次屋顶。时间机器现在还在那里，铃羽和桶子偶尔会前去为其保养。就在几天前，我还被铃羽叫过去，用枪口指着。尽管如此，位于8层的，作为现场的仓库，在那之后我再也没有去过。没有去的勇气。只是回想起那天的事，脑中就会发生强烈的闪回现象。要回到红莉栖死去的地方，实在是强人所难。  
+我们来到了广播会馆。比屋定想要来这里代表着什么，我也立即就理解了。因为这里是，牧濑红莉栖逝世的地方。在那之后我也到过很多次屋顶。时间机器现在还在那里，铃羽和桶子偶尔会前去为其保养。就在几天前，我还被铃羽叫过去，用枪口指着。尽管如此，位于8层的，作为现场的仓库，在那之后我再也没有去过。没有去的勇气。只是回想起那天的事，脑中就会发生强烈的闪回现象。要回到红莉栖去世的地方，实在是强人所难。  
 “没事吧？脸色很差啊。”  
 “……”  
 “想起了红莉栖的事情吗？”  
@@ -52,11 +52,11 @@
 “……是啊。”  
 “请务必尝试那个研究，我会挺身做第一个载人实验者的。”  
 比屋定用分不清是玩笑还是认真的语气说着，凄凉地笑了笑。——时间机器的话，是存在的，而且就在我们的正上方不远处。如果这样说的话，她会怎么样呢？责备我放弃了拯救红莉栖，并提出代替我跳跃回过去吗？  
-“冈部，红莉栖死去时的情况，能告诉我吗？我什么细节都不知道。”  
+“冈部，红莉栖去世时的情况，能告诉我吗？我什么细节都不知道。”  
 “我……也不知道多少……之前，没给你说过吗？”  
 “但是，至少比起在美国的我要更清楚一些吧。  
  红莉栖为什么会来到这种地方？  
- 红莉栖死去的时候，旁边的房间也像今天这样举行着活动吧。”  
+ 红莉栖去世的时候，旁边的房间也像今天这样举行着活动吧。”  
 “唔……”  
 活动会场偶尔传来的笑声还是很高涨，一直传到我们所在的地方。
 “中钵博士，去年的夏天上了新闻。  
