--- a/steins_gate_0/docs/0077.md
+++ b/steins_gate_0/docs/0077.md
@@ -106,7 +106,7 @@
 “冰箱都买了！？”  
 『工作的地方有冰箱的话非常方便呢！  
  不需要出去就能拿到饮料，除了上卫生间以外都不需要出房间了真好！>_<  
- ![](../pics/emojis/Taru-gandong.png)』  
+ ![](../pics/emojis/Taru-ku.png)』  
 “……两个不适合社会生活的人聚在一起，就会制造出这样的空间吗……”  
 “这是主观差异哦。不如说，这是最适合从事智力生产活动的生活空间……希望你这么说呢。”  
 “……哈。”  
