--- a/steins_gate_0/docs/0079.md
+++ b/steins_gate_0/docs/0079.md
@@ -72,7 +72,7 @@
 萌郁声若蚊蝇般发问，真帆鼓励地点了点头。  
 「既然决定了就要立即实践吧」  
 『但是但是！刚刚也说了，我，对于和人谈话真的很不在行啊~！（>_<）  
- ![](../pics/emojis/Taru-xiezui.png)』  
+ ![](../pics/emojis/Taru-gui.png)』  
 「这样吗？  
  还以为昨天你紧张是因为冈部在呢  
  以为你是有异性在就紧张的类型……」  
