--- a/steins_gate_0/docs/0072.md
+++ b/steins_gate_0/docs/0072.md
@@ -30,7 +30,7 @@
  绹酱，好厉害呢。是非常坚强的女孩子』  
 「是啊」  
 『啊，真由氏也已经不要紧了！』  
-「![](../pics/emojis/Taru-gandong.png)」  
+「![](../pics/emojis/Taru-ku.png)」  
 
 
 袭击事件发生后的第二天。我比约定好的时间稍微早到了一点，但对方的身影已经出现在那里。  
