--- a/steins_gate_0/docs/0081.md
+++ b/steins_gate_0/docs/0081.md
@@ -49,7 +49,7 @@
  因为人们忘却了信仰，古印加帝国以自身为代价施加的封印被破坏了喵！  
  这样下去，冥王星的恐怖大邪神复活也只是时间的问题喵！  
  不仅仅是地球，也是大银河星团联盟的生死危机喵！  
- ![](../pics/emojis/Taru-xiezui.png)  
+ ![](../pics/emojis/Taru-gui.png)  
  现立即向贵族院、元老院及奥之院全体发布召集通告喵！  
  总统如今行踪不明，一定是乘着空军一号深入敌境，独自奋战喵！  
  接下来菲莉丝也要为了再次封印邪神而准备举行仪式了喵！  
@@ -61,7 +61,7 @@
 『刚刚是在开玩笑喵  
  ![](../pics/emojis/Moeka-sorry.png)  
  但是真的有大事发生了喵！  
- ![](../pics/emojis/Taru-xiezui.png)（x2）』  
+ ![](../pics/emojis/Taru-gui.png)（x2）』  
 「发生什么了？」  
 『![](../pics/emojis/Okarin-ha.png)』  
 『待会儿再解释喵！  
