--- a/steins_gate_0/docs/0078.md
+++ b/steins_gate_0/docs/0078.md
@@ -12,7 +12,7 @@
 “其实本来计划昨天在宾馆接受采访的。”  
 『我所在的【Arc Rewrite】，正在制作商业杂志的专题报道  
  专题内容是《人工智能研究最前线》”  
- ![](../pics/emojis/ooohyeah.png)  
+ ![](../pics/emojis/Bear-ooohyeah.png)  
  我负责比屋定博士，整理博士的业绩和最新的研究内容  
  但是，只是在网上搜索就能得到的内容并不够写出冲击性的报道呢……  
  因此，想在卷首登出对比屋定博士的长篇采访』  
