黑木 --> 黑木先生

--- a/steins_gate_0/docs/0055.md
+++ b/steins_gate_0/docs/0055.md
@@ -100,7 +100,7 @@
 “另外我还会若无其事地问问 *MayQueen+Nyan²* 的主人们的喵。”  
 “我也会去问问爸爸和香客们的。”  
 “不好意思，帮大忙了。”  
-黑木和琉华子父亲的人脉很广，成功的可能性要比我们这么瞎找要高得多。能找到点线索就好了。  
+黑木先生和琉华子父亲的人脉很广，成功的可能性要比我们这么瞎找要高得多。能找到点线索就好了。  
 “话说回来，琉华子，怎么拿这么多东西？”  
 “啊，这是那个……昨天说过的，父亲的客人来了我家。其实其中一位客人在我们家住下了……”  
 “所以就来帮忙买了一些必需品的样子喵。”  
@@ -113,7 +113,7 @@
 如此警告后，便和菲莉丝她们分别了——虽然是这么打算的。  
 “……嘿~咻……嘿~咻……”  
 “琉华喵，没问题吧喵？都在晃了喵！”  
-“没、没问题。<abbr title="此处强调男性自称">我</abbr>……也是……才这种程度……”  
+“没、没问题。<abbr title="此处强调男性自称">我</abbr>……也真是的……才这种程度……”  
 “……”  
 
 “那个……可以的话喝杯茶再走吧。”  
