--- a/steins_gate_0/docs/0057.md
+++ b/steins_gate_0/docs/0057.md
@@ -26,7 +26,7 @@
 ![](../pics/0057-2.png)
 
 从电器街检票口出来，眼前的广播馆一如往常地耸立着。铃羽乘坐的时间机器就安置在屋顶上。想想虽然不是什么常有人来的地方，但这么久还没被发现也真是了不起。这也多亏了菲莉丝，她租下并封锁了广播馆的楼顶。  
-不过我也不是来这查看时间机器的。昨天从LAB回家后，收到了菲莉丝和琉华子的回复。琉华子问了父亲，菲莉丝问了管家黑木，果然还是没有任何线索。想想也是当然的。如果当年向警察提出搜索请求说不定会有些以前留下的线索，不过我们无法尝试这方面的手段。  
+不过我也不是来这查看时间机器的。昨天从LAB回家后，收到了菲莉丝和琉华子的回复。琉华子问了父亲，菲莉丝问了管家黑木先生，果然还是没有任何线索。想想也是当然的。如果当年向警察提出搜索请求说不定会有些以前留下的线索，不过我们无法尝试这方面的手段。  
 不过菲莉丝还说了一件有意思的事。  
 “但是，听说了有麻花辫的幽灵出现的事。”  
 “麻花辫的幽灵？”  
