--- a/steins_gate_0/docs/0076.md
+++ b/steins_gate_0/docs/0076.md
@@ -65,7 +65,7 @@
 “那个，该怎么说好呢……”  
 正当比屋定犹豫不决的时候，菲莉丝抱着胳膊并满意地点了点头。  
 “这个结论很正确喵！确实，这个公寓因为有完全的安保措施所以很安全喵。况且黑木也在。”  
-“黑木？”  
+“黑木先生？”  
 “刚才在门口见到的管家哟~是货真价实的管家哟~！”  
 “啊……但是，这又怎么了呢？”  
 “黑木先生是最强管家。”  
