--- a/steins_gate_0/docs/0077.md
+++ b/steins_gate_0/docs/0077.md
@@ -3,21 +3,21 @@
 > [ 2011/01/03 ] 犹豫不放心，冈伦去菲莉丝的公寓查看二人情况。除了房间被改造得乱七八糟之外二人生活得反而很和谐。冈伦稍微放下戒心。
 
 第二天，新年的第三天，我连续三天来到了秋叶原。这次为的是前往菲莉丝的公寓，确认比屋定的情况……不，不对，应该是为了确认桐生萌郁的情况。昨天，大体上是定下了比屋定和桐生萌郁同居的事。桐生萌郁能向比屋定取材，比屋定也能消除独自一人的不安，这或许是最佳方案。但是，我知道桐生萌郁的另一面——她是一名Rounder。不只是所谓的“学过了防身术”这种程度，而是必要的情况下能够杀人的技术。问题是，这种技术，要向谁施展呢？在我们不用费心搜索IBN5100，也没有造出时间机器的这条世界线里，Rounder应该是不会盯上我们的。虽然心里很清楚这些道理，但是……  
-就算是新年假期，秋叶原看上去还是一如既往的热闹。从家电贩卖店到女仆咖啡店，基本都是从元旦起就开门营业了，只是营业时间跟平时比有所缩短。不过因为福袋和新春特别菜单之类的，以及只能在元旦三天才能买到的商品，以此为目的聚集的客人更多了。从附近神社过来的穿着靓丽的女性们和一成不变的秋叶原阿宅们在人行道上穿梭着，真是跟平时比起来更加混乱的景象啊。话说回来，*MayQueen* 这几天也没有休息还在营业啊。菲莉丝和真由理也是，今天早上就说去店里上班。这样的话，公寓里只有那两个人了吧——准确来说，管家黑木应该也在。应该……没问题吧？桐生萌郁会对比屋定实施某种行动——比如施加暴力什么的——想想还是不可能，因为没有这么做的理由。但是，就算脑中再怎么明白，心情还是冷静不下来。怎么都无法释怀，留意到自己心中不断堆积的心结，昨天并没有睡得很好。亲眼见证两人的共同生活，确认没什么问题的话，说不定这种焦躁就会慢慢消散。  
+就算是新年假期，秋叶原看上去还是一如既往的热闹。从家电贩卖店到女仆咖啡店，基本都是从元旦起就开门营业了，只是营业时间跟平时比有所缩短。不过因为福袋和新春特别菜单之类的，以及只能在元旦三天才能买到的商品，以此为目的聚集的客人更多了。从附近神社过来的穿着靓丽的女性们和一成不变的秋叶原阿宅们在人行道上穿梭着，真是跟平时比起来更加混乱的景象啊。话说回来，*MayQueen* 这几天也没有休息还在营业啊。菲莉丝和真由理也是，今天早上就说去店里上班。这样的话，公寓里只有那两个人了吧——准确来说，管家黑木先生应该也在。应该……没问题吧？桐生萌郁会对比屋定实施某种行动——比如施加暴力什么的——想想还是不可能，因为没有这么做的理由。但是，就算脑中再怎么明白，心情还是冷静不下来。怎么都无法释怀，留意到自己心中不断堆积的心结，昨天并没有睡得很好。亲眼见证两人的共同生活，确认没什么问题的话，说不定这种焦躁就会慢慢消散。  
 怀着复杂的心情，我急速赶往菲莉丝的公寓。  
 
 ![](../pics/0077-1.png)
 
 “欢迎到访，冈部大人。”  
-管家黑木在门口迎接我。他是仅凭一人之力就完美照料了因父亲去世而孤身一人的菲莉丝的最强管家，现在也协助着菲莉丝的工作，是菲莉丝为数不多能够完全信任的人。  
+管家黑木先生在门口迎接我。他是仅凭一人之力就完美照料了因父亲去世而孤身一人的菲莉丝的最强管家，现在也协助着菲莉丝的工作，是菲莉丝为数不多能够完全信任的人。  
 “非常抱歉，大小姐现在外出了。”  
 “啊，是的，我知道。我是来看望比屋定小姐的。”  
 “那两位正在客房里。请进。”  
 “非常感谢。”  
 “那么，我先告退。”  
-黑木一如既往干净利落地180度转身，准备以最短的距离回到自己的房间——  
+黑木先生如往常一般干净利落地180度转身，准备以最短距离回到自己的房间——  
 “哎哟……”  
-不知道是不是脚被什么东西绊住了，黑木稍微踉跄了一下，停在原地。  
+不知道是不是脚被什么东西绊住了，黑木先生稍微踉跄了一下，停在原地。  
 “非常抱歉，我失态了。”  
 “没事吧？”  
 “可能是有些许疲惫，让您见笑了。”  
