--- a/steins_gate_0/docs/0002.md
+++ b/steins_gate_0/docs/0002.md
@@ -4,7 +4,7 @@
 
 平复心情的时候接到了真由理的***RINE***。  
 这是最近才火起来的一种即时通讯软件，比邮件更加方便，所以用的人很多。  
-『嘟嘟噜~冈伦~研讨会的准备还顺利吗？』  
+『嘟嘟噜~♪冈伦~研讨会的准备还顺利吗？』  
 「啊啊，没问题」  
 『是吗？真好呢~  
  很期待是怎样的研讨会呢  
