--- a/steins_gate_0/docs/0011.md
+++ b/steins_gate_0/docs/0011.md
@@ -203,7 +203,7 @@
 真由理：“再见啦~”  
 枫：“晚安，真由理酱，由季。”  
 由季：“再见。”  
-真由理：“嘟嘟噜~”  
+真由理：“嘟嘟噜~♪”  
 吹雪：“拜拜！”  
 吹雪一直站在这里目送着真由理和由季的背影消失在视线中。为了忍住快要掉落的眼泪，她仰起了头。  
 “吹雪酱……怎么了？”  
