--- a/steins_gate_0/docs/0012.md
+++ b/steins_gate_0/docs/0012.md
@@ -186,7 +186,7 @@
 刚才铃羽说要注意的那些地方，阿万音由季也一样不差地说到了。果然是母女啊……  
 这时，正在稍微怀念着家的感觉的铃羽，注意到了新的来访者的气息。  
 
-“嘟嘟噜~”  
+“嘟嘟噜~♪”  
 玄关的门打开后，房间里响起了早已听惯的问候。  
 “不好意思呢，由季，稍微有点迟到了~”  
 是跟阿万音由季约好在这里会合的椎名真由理。  
