--- a/steins_gate_0/docs/0014.md
+++ b/steins_gate_0/docs/0014.md
@@ -75,7 +75,7 @@
 
 ![](../pics/0014-1.png)
 
-“店长先生！嘟嘟噜~”  
+“店长先生！嘟嘟噜~♪”  
 “哦！”  
 “呜哇~只有一件T恤，不冷吗？”  
 “因为锻炼过啦。”
@@ -96,7 +96,7 @@
 “……走吧。”  
 天王寺先生的事情，随他去吧。比起这个，我为什么来到了这里？虽然觉得这样下去并不好……是因为真的想让“红莉栖”看看LAB吗？自己也没有整理好思绪，登上了台阶。
 
-“嘟嘟噜~”  
+“嘟嘟噜~♪”  
 真由理先走了进去。  
 “不好意思呢，由季，稍微有点迟到了~”  
 “真由理酱，你好啊~”  
