--- a/steins_gate_0/docs/0051.md
+++ b/steins_gate_0/docs/0051.md
@@ -70,7 +70,7 @@
 ![](../pics/0051-3.png)
 
 “啊——！”  
-“嘟嘟噜——这里是真由氏~”  
+“嘟嘟噜~♪这里是真由氏~”  
 “真由理！是真由理吗！？真的是真由理吧！？”  
 “冈、冈伦？怎么了，这么慌张？”  
 电话那头传来的悠然自在的声音，毫无疑问来自真由理。  
