--- a/steins_gate_0/docs/0054.md
+++ b/steins_gate_0/docs/0054.md
@@ -41,7 +41,7 @@
 
 “真由氏的<abbr title="注：“幼女”和“养女”同音">幼女</abbr>怎么了吗~？”  
 突然，在极近距离处传来声音，全员一齐向看过去。  
-“嘟嘟噜~冈伦，真的在这等着呢！”  
+“嘟嘟噜~♪冈伦，真的在这等着呢！”  
 真由理……  
 “……？怎么了？”  
 看到真由理，我终于感到了安心。  
