--- a/steins_gate_0/docs/0063.md
+++ b/steins_gate_0/docs/0063.md
@@ -67,7 +67,7 @@
 钥匙圈应该是篝的东西。但也可能是她从椎名篝那里拿到的，或者是捡到的。不过，据铃羽所说，篝很爱护这个钥匙圈。不说遗失掉，应该也完全不可能交给别人。这样说来，果然……  
 
 这时，入口的门打开，真由理像是要先刺探一下情况般探进了头，招牌的招呼声也显得小心翼翼。  
-“……嘟嘟噜~？”  
+“……嘟嘟噜~♪？”  
 “那个……没事……吧？”  
 “啊……不好意思，麻烦你们特地跑一趟。”  
 “没事……”  
