--- a/steins_gate_0/docs/0064.md
+++ b/steins_gate_0/docs/0064.md
@@ -5,16 +5,16 @@
 这是琉华子把篝带到LAB后的第二天。穿过浓厚圣诞氛围中的秋叶原街，我和真由理一起前往柳林神社。  
 “啊，真由理酱！还有冈部先生！”  
 还没来得及打招呼，琉华子就发现了我们，绽放笑颜。那是可爱得完全不像是男人的、事到如今还会让人怀疑他性别的笑颜。  
-“琉华君、篝酱，嘟嘟噜~”  
-“呵呵，嘟嘟噜~desu。”  
+“琉华君、篝酱，嘟嘟噜~♪”  
+“呵呵，嘟嘟噜~♪desu。”  
 “哇，篝酱，好棒！”  
 “诶？什么？”  
-“因为，就算真由氏说嘟嘟噜~，一开始大家都不肯用嘟嘟噜~回我呢。”  
+“因为，就算真由氏说嘟嘟噜~♪，一开始大家都不肯用嘟嘟噜~♪回我呢。”  
 “要求初次见面的人理解这是打招呼也太苛刻了。”  
 “嗯。所以明明大家的反应都是‘那是啥？’，篝却很正常地回复了我，真的好棒！”  
 “我、我也没特别……只是莫名觉得应该是那样吧。”  
-说不定真由理独特的招呼已经深深烙在了篝的记忆中。嗯？也就是说……25年后的真由理还在说着嘟嘟噜吗？嘛，不愧是真由理，也不是什么奇怪的事。  
-“啊，冈部先生也，嘟嘟噜~desu。”  
+说不定真由理独特的招呼已经深深烙在了篝的记忆中。嗯？也就是说……25年后的真由理还在用“嘟嘟噜”吗？嘛，不愧是真由理，也不是什么奇怪的事。  
+“啊，冈部先生，嘟嘟噜~♪desu。”  
 “你好……”
 话说回来，我现在还在烦恼要用什么态度对她。她和铃羽分别时是10岁。之后过了12年，现在应该是22岁。年龄上比我年长，但又是真由理的养女。从这种意义上，立场和桶子的女儿铃羽是相同的。铃羽姑且和我们同岁，就算不用敬语也没有违和感……  
 “啊，对了。今天是圣诞夜呢，圣诞快乐~”  
