--- a/steins_gate_0/docs/0082.md
+++ b/steins_gate_0/docs/0082.md
@@ -12,7 +12,7 @@
  ![](../pics/emojis/Taru-gui.png)（x2）  
  大危机喵！！！！  
  今天傍晚，乃三十二万年不遇之九星联珠与群星归位并现喵！  
- 最终封印将解除，幻想中等待千年的伟大存在即将苏醒，幻之大陆露露易耶将重现于世喵！  
+ 最终封印将解除，幻想中等待千年的伟大存在即将苏醒，幻之大陆拉莱耶将重现于世喵！  
  ![](../pics/emojis/Taru-gui.png)  
  夸张了点  
  但真的是有大危机喵！  
