全罩头盔 --> 全覆式头盔

--- a/steins_gate_0/docs/0046.md
+++ b/steins_gate_0/docs/0046.md
@@ -108,7 +108,7 @@
  我已经，不是以前的我了啊……”  
 真帆从天桥上眺望着车站前的人群，喃喃自语着。  
 
-突然，一个衣着特别显眼的人从桥下走了过来。如此炎热的天气，那个人却穿着黑色的骑手装，戴着全罩头盔，显得与周围格格不入。她还以为是所谓的cosplay，但是周围的人不要说拍照了，反而都退避地让出道路。看体形的话，好像是名女性。以真帆来看，那也算得上是凹凸有致富有魅力的身材。  
+突然，一个衣着特别显眼的人从桥下走了过来。如此炎热的天气，那个人却穿着黑色的骑手装，戴着全覆式头盔，显得与周围格格不入。她还以为是所谓的cosplay，但是周围的人不要说拍照了，反而都退避地让出道路。看体形的话，好像是名女性。以真帆来看，那也算得上是凹凸有致富有魅力的身材。  
 那个女人就那样穿过天桥下方，离开了真帆的视线范围。  
 ——就在以为她已经离开的时候，那个人却从天桥的楼梯走了上来，而且笔直地朝向真帆的方向。  
 真帆就像其他行人一样慌忙低下视线，想赶快离开这个地方。然而在真帆逃开之前，穿骑手装的女性就跑到了她的身边，一言不发地抓住了她的手臂。
