--- a/steins_gate_0/docs/0047.md
+++ b/steins_gate_0/docs/0047.md
@@ -60,7 +60,7 @@
 ![](../pics/0047-3.png)
 
 “呜…呜呜……妈妈…妈妈她……”  
-那个人影坐在楼梯上，抱着双膝。呜咽的声音听起来很模糊，大概能听出好像是位女性。昏暗的光线下模模糊糊地看到她的头部显得异常大而圆，仔细一看发现那是全罩头盔。真帆这才意识到，在那边哭的正是刚刚打了自己耳光的那个穿骑手装的女人。  
+那个人影坐在楼梯上，抱着双膝。呜咽的声音听起来很模糊，大概能听出好像是位女性。昏暗的光线下模模糊糊地看到她的头部显得异常大而圆，仔细一看发现那是全覆式头盔。真帆这才意识到，在那边哭的正是刚刚打了自己耳光的那个穿骑手装的女人。  
 “呜呜呜……妈妈……在哪里啊……妈妈……”  
 和刚才威胁真帆的判若两人。现在的她只是一味地哭叫着妈妈。  
 “呐，发生了什么事？”  
