--- a/steins_gate_0/docs/0080.md
+++ b/steins_gate_0/docs/0080.md
@@ -52,7 +52,7 @@
 “你也说是刚到对吧？那为什么知道我是刚刚开始工作呢？”  
 “啊，那是因为——”  
 红莉栖指着播放着钢琴曲的扬声器。  
-“还在第一乐章的开头呀——K331，莫扎特A大调第11号钢琴奏鸣曲，第一乐章。”  
+“还在第一乐章的开头呀，K331——莫扎特A大调第11号钢琴奏鸣曲，第一乐章。”  
 “你喜欢莫扎特吗？”  
 “略懂。而且比起莫扎特其他曲子，我更喜欢这首。  
  虽然对于普通人来说，《土耳其进行曲》更有名一些。  
