--- a/article/sg0/doc/0086.md
+++ b/article/sg0/doc/0086.md
@@ -1,169 +1,119 @@
 > <big> ** 存在证明的自动机械- 12** </big>  
 > 1.081163  
-> [ 2011/01/05 真帆视角 ] 
+> [ 2011/01/05 真帆视角 ] 逃跑过程中遇到教授，听从教授的安排来到临时办公室，打算删除『Amadeus』的连接程序。登录过程中从教授口中得知红莉栖也认为真帆是她的萨列里。即将删除时有个女人来袭。  
 
 比屋定真帆拼命地跑着。完全无法理解现状，但是从冈部不寻常的表现和逃走时听到的枪声，可以明白情况非常糟糕。她一边祈祷着冈部和真由理以及绹的平安，一边飞奔向菲莉丝的公寓。  
 “得赶快通知大家！”  
-菲莉丝、黑木，还有萌郁在都在那里，他们说不定能够想到办法应对目前的情况。但是就在快要到达的时候，真帆看见之前的黑色涂装面包车沿着前方的道路开了过来。  
+菲莉丝、黑木，还有萌郁在都在那里，他们说不定能够想到办法应对目前的情况。  
+
+但是就在快要到达的时候，真帆看见之前的黑色涂装的面包车沿着前方的道路开了过来。  
 “啊——！？”  
-“慌张地折返”  
-“心中涌上了绝望的感觉”  
-“那个面包车在到处跑的话，就是说冈部他们已经被抓住了吗？”  
-“然后，在搜寻逃跑的真帆？”  
-“（假的，骗人的，那不是真的……）”  
-“眼泪都快流出来了，总之先跑向车站的方向”  
-“但是到了车站了，却不知道该做些什么”  
-“虽然应该依靠警察的，但是真帆不知道警察局或者派出所的地点”  
-“应该向周围的行人或车站的工作人员寻求帮助吗？”  
-“该怎么办……！”  
-“冷静点，应该有什么好办法的……”  
-“真帆试着平复混乱的思维”  
-“于是，突然想到”  
-“对，对了！电话！”  
-“为什么没有早点想到呢！”  
-“摸索着衣服的口袋寻找着手机”  
-“另外，也搜索着带来的包”  
-“——但是，口袋里和包里都找不到手机”  
+真帆惊惶地往回跑，绝望涌上了心头。那辆面包车在到处转，也就是说冈部他们已经被抓住了吗？然后，现在正在搜寻逃跑的真帆？  
+（假的，骗人的，那不是真的……）  
+真帆强忍即将溢出的泪水，总之先跑向车站的方向。  
+
+可到了车站之后，却不知道该做些什么。虽然应该依靠警察，但是真帆不知道警察局或者派出所的位置。应该向周围的行人或车站的工作人员求助吗？  
+“哈啊……哈啊……哈啊……  
+ 该怎么办才好……！  
+ 冷静下来，肯定有什么方法的……”  
+真帆试着控制住混乱的思维。于是，她灵光一闪——  
+“对、对了！电话！为什么没有早点想到呢！”  
+摸索着衣服口袋寻找手机，接着也搜索了提包——然而，口袋里和包里都没有找到手机。  
 “为什么！？”  
-“又来了！”  
-“是刚才黑色涂装的面包车”  
-“在这附近徘徊搜寻着真帆”  
-“真帆急忙地躲进了附近的储物柜边上”  
-“为什么……找不到手机……？”  
-“是在逃跑的途中弄丢了吗？”  
-“试着回想自己从公寓出来前到现在的行动”  
-“……啊”  
-“马上想到了”  
-“走出公寓之前，真帆在客房与冈部对话”  
-“没带手机却说“去打个电话”糊弄过去之后，冈部把手机拿了过来——”  
-“于是，手机放在桌子上，没有拿过来”  
-“估计现在也还放在那里吧”  
-“真是的……”  
-“四面楚歌啊……”  
-“果然只有想办法去找警察的样子了”  
-“躲进某个店里或许会比较好”  
-“还有几个店还在营业中”  
-“最好是去车站或友都八喜附近”  
-“但问题是那辆黑色的面包车”  
-“从刚才开始一直在这附近徘徊着”  
-“随便行动的话说不定会被发现”  
-“真帆尽量的蜷缩身体，与电线杆的影子化为一体”  
-“……”  
-“冈部他们，平安无事吗——”  
-“！？”  
-“突然，真帆的嘴巴被从背后伸来的手牢牢地捂住，同时身体也被紧紧地抱住了”  
-“——！”  
-“拼命地叫着想要挣脱那只手，但是捂住嘴巴的手纹丝不动”  
-“头也转不过去，只知道抓着的是个男的”  
-“——！”  
-“真帆对自己所处的不可理喻的情况渐渐气愤了起来”  
-“于是，使劲浑身的力气，向背后使出一发肘击”  
-“可恶！”  
-“♂Oops♀”  
-“发出了忍耐般的叫声的同时，真帆的身体终于被解放了”  
-“但是，男子发出的叫声不知为何很耳熟”  
-“——教、教授”  
-“嘘”  
-“呼……你好，Maho”  
-“在那里的是雷斯吉宁教授，很痛的样子摸着胸口，仍然笑着面向真帆”  
-“居然习得了护身术，真是佩服”  
+又来了！是刚才黑色面包车！它在这附近徘徊着，搜寻着真帆！  
+真帆迅速躲在了附近的寄存柜后面。  
+“为什么……找不到……手机……？”  
+是在逃跑的途中弄丢了吗？真帆试着回想自己从公寓出来前到现在的行动。  
+“……啊！”  
+很快便有了头绪。离开公寓之前，真帆在客房与冈部有过对话。当时自己没带手机却借口“去打个电话”躲进客房独处，冈部把手机拿了过来——然后他把手机放在了桌上，我没有拿过来。估计现在也还放在那里。  
+“怎么这样……穷途末路了啊……”  
+果然还是得想办法去找警察；或许也可以躲进某个店里，现在还有几个店在营业；最好是去车站或友都八喜附近。但问题是那辆黑色面包车，从刚才开始一直在这附近徘徊，鲁莽行动的话很容易被发现。真帆尽量蜷缩起身体，与电线杆的影子化为一体。  
+“……冈部他们，应该没事吧——！！？？”  
+突然，真帆的嘴巴被从背后伸来的手牢牢地捂住，同时身体也被紧紧地抱住了。  
+“唔——！唔——！！”  
+真帆拼命叫着想要挣脱，但是那只手纹丝不动。真帆也无法转过头，只知道抓住她的是个男人。  
+“唔——！唔——！！”  
+真帆对自己所处的不可理喻的的情况愈发气愤。于是，她使尽全身的力气，向背后一发猛力肘击。  
+“可！恶！！”  
+“*Oops!*”  
+男人发出了一声压抑的痛呼，真帆的身体终于重获自由。不过，男人的叫声不知为何很耳熟。  
+“——教、教授！？”  
+“嘘——呼……*Ya, Maho*。”  
+身后的人是雷斯吉宁教授。他捂着胸口，忍着痛苦对真帆露出笑脸。  
+“居然习得了护身术，真是佩服。”  
 “为什么在这里？”  
-“大概，和你的原因一样”  
-“刚才还在和Mr. Izaki(井崎)享用晚餐……”  
-“最后准备去Maid Bar的时候，被拿着枪的人袭击了”  
-“！我、我也是这样的！”  
-“果然啊……”  
-“这样的话，认为瓦斯泄露时间和酒店被盗事件也是因为相同的理由比较好”  
-“目标可能是『Amadeus』，包括我持有的控制代码”  
+“大概，和你的理由相同。
+ 我刚才还在和 *Mr. Izaki(井崎)* 享用晚餐……  
+ 最后准备去 *Maid Bar*的时候，被持枪团伙袭击了。”  
+“啊！我、我也是这样！”  
+“果然啊……或许应该判断，这次的事件和瓦斯泄露事件与酒店被盗事件有着相同的理由。”  
+“目标可能是『Amadeus』，包括我持有的控制代码。”  
 “原来如此……”  
 “接下来该怎么办？”  
-“嗯……”  
-“教授思考了一会后整理了下呼吸，看样子是真帆的肘击带来的疼痛导致的”  
+“*Hum……*”  
+教授思考了一阵子，调整好了呼吸，看样子真帆的肘击导致的疼痛已经逐渐消退了。  
 “现在能访问『Amadeus』吗？”  
-“不行，我把手机落下了”  
-“OK，那么去办公室吧”  
-“新的办公室吗？”  
-“雷斯吉宁对真帆的提问点了点头”  
-“不知道目的的话自然无法行动，如果那帮人的目标是『Amadeus』的话事情就好说了”  
-“将留在大学的网络存储器上的『Amadeus』连接程序消除”  
-“完成之后，回合众国，申请你的保护”  
-“这么以来，那帮人也无法下手了吧”  
+“不行，我忘带手机了。”  
+“*OK*，那我们去 *office* 吧。”  
+“那间新办公室吗？”  
+教授点头回答了真帆的问题。  
+“本来不知道那群人的目的，自然无法行动，  
+ 如果那帮人的目标是『Amadeus』就好办了。  
+ 首先删除大学的网络存储器上的『Amadeus』连接程序，  
+ 完成之后，回合众国，申请对你人身安全的保护。  
+ 这样一来，那帮人就无法下手了吧。”  
 “但、但是……”  
-“还有什么问题吗？”  
-“被教授与平时氛围有些不同的目光气势所压倒，真帆无言以对”  
-“教授的提议是想得到的方法中算得上最佳的，消除从日本国内登录『Amadeus』的方法，并且，将持有控制代码的真帆藏到安全的地方”  
-“现在，真帆所感到的犹豫，只是她的感伤而已”  
-“虽然是短暂的时间，但是与冈部和萌郁他们的交流很快乐”  
-“不想以这种方式连招呼都不打个就分别”  
-“但是，是没办法的事”  
-“……我明白了，走吧”  
+“有什么问题吗？”  
+教授的目光充满气势，与平时的氛围完全不同。真帆无言以对。教授的提议在能想到的方法中算得上最优解，消除从日本国内访问『Amadeus』的方法，并且将持有控制代码的真帆藏到安全的地方。现在真帆所感到的犹豫，只是出于感伤而已。即使时间短暂，与冈部和萌郁他们的交往也充满快乐，她不想以这种方式连招呼都不打就分别。但这也实属无奈。  
+“……我明白了，走吧。”  
 
-“电机大的暂用办公室里谁都不在”  
-“虽然也考虑过来袭的那群人的同伴埋伏着的可能性，但是貌似是杞人忧天了”  
-“呼……”  
-““We did it！””  
-“看样子没有被抢先的样子”  
+电机大的临时办公室里空无一人。原本还考虑过会有袭击团伙的同伴埋伏的可能性，看来貌似是杞人忧天了。  
+“呼……*We did it!* 看样子没有被抢先啊！”  
 “……”  
 “怎么了？”  
-“啊、没什么……是啊，真幸运”  
-“的确是幸运”  
-“但是，太过于顺利了，反而感到了不安”  
-“那帮人的目标是『Amadeus』的话，安置有连接端的这里不是应该首先控制住的吗？”  
-“因为是几天前突然决定的暂用办公室，那帮人还没有掌握到吗？”  
+“啊、没什么……是啊，真幸运。”  
+确实很幸运。可是，太过于顺利了，反而感到不安。倘若那帮人的目标是『Amadeus』，安置有连接终端的这里不是应该首先控制住的吗？因为是几天前突然决定的临时办公室，那帮人还没有掌握到吗？  
+“……想太多也不好啊。”  
+“*Maho*，赶快，操作就拜托你了。”  
+“是。”  
+真帆马上启动了笔记本电脑，打开了登录界面。  
 “……”  
-“……想太多不太好啊”  
-“Maho，赶快，操作拜托了”  
-“是”  
-“马上启动了笔记本电脑，打开了登录界面”  
-“……”  
-“视线又被画面中显示的自己的账户所吸引”  
-“Salieri”  
-“Maho？”  
-“催促停下来的真帆工作似的，教授搭了话过来”  
-“操作有困难的话，要我来做吗？”  
-“大概是认为我受到袭击后精神还不稳定吧”  
-“但是真帆左右摇摇头，马上开始了工作”  
-“对不起，想了些事”  
-“最近这几天，我在思考我与红莉栖之间的关系”  
-“真帆边敲打着按键，边对雷斯吉宁教授说明”  
-“看到自己的用户名后，不禁想到了那些”  
-“对我来说，如同字面意思，她就像Amadeus”  
-“Kurisu是Mozart？”  
-“啊，那就是说，Maho就是对Kurisu来说的Salieri这样吗？”  
+画面中显示着自己的用户名，那串英文吸引了她的目光——Salieri。  
+“*Maho?*”  
+看到真帆停住了动作，教授不由得开口。  
+“操作有困难的话，我来做吧？”  
+大概是担心真帆受到袭击后精神还不稳定吧。不过真帆摇摇头，马上开始了操作。  
+“对不起，想了些事情。最近这几天，我一直在思考我与红莉栖之间的关系。”  
+真帆一边敲打着键盘，一边对雷斯吉宁教授解释。  
+“看到自己的用户名，不禁想到了那些。  
+ 于我而言，如同名字一样，她就是Amadeus。”  
+“*Kurisu* 是 *Mozart*？  
+ 啊，那就是说，*Maho* 对 *Kurisu* 来说就是 *Salieri* 吗？”  
 “嗯……”  
-“hum……”  
-“我想起来了”  
-“Kurisu以前也说过同样的话”  
-“唉？”  
-“红莉栖吗？怎么说的？”  
-“有一天，听到说Amadeus是指“受上帝宠爱的孩子”的意思的我，对Kurisu这样说道：”  
-““你正是Amadeus啊””  
-“然后，她微笑着这么回答道：”  
-“我如果是Amadeus的话”  
-“——Salieri就是真帆前辈了”  
-“……？”  
-“红莉栖……这么说的吗？”  
-“嗯”  
+“*Hum……*听你这么说我想起来了。*Kurisu* 以前也说过同样的话。”  
+“诶！？红莉栖吗？怎么说的？”  
+“有一天，我得知了Amadeus有‘被神爱者’意思，于是对 *Kurisu* 说：  
+ ‘你正是 *Amadeus* 啊。’  
+ 然后，她微笑着回答道： 
+ ‘如果我是 *Amadeus* 的话——*Salieri* 就是真帆前辈呢。”  
+“啊……？红莉栖……这么说的吗？”  
+“嗯。”  
 “红莉栖……”  
-“真帆头脑变得一片空白”  
-“——红莉栖说了这样的话？”  
-“那到底，是什么意思？”  
-“Maho？没事吧？脸色不好啊”  
-“……不，没什么，没事的”  
-“我继续工作”  
-“真帆感觉到了自己的心中像暴风雨肆虐着一样的错觉”  
-“但是，现在必须集中与眼前的事情”  
-“之后也能慢慢思考”  
-“能登录了”  
-“可以吗？”  
-“真帆看着画面问向了教授”  
-“嗯”  
-“雷斯吉宁教授没有犹豫”  
-“又不是删除『Amadeus』本体，快快地结束吧”  
-“……知道了”  
-“『Amadeus』系统的连接程序暂时全部删除”  
-“没有那个必要”  
+真帆的头脑变得一片空白——红莉栖说过这样的话吗？那到底，是什么意思？  
+“*Maho*？没事吧？脸色不好啊。”  
+“……不，没事的。我继续操作了。”  
+真帆感觉，自己的内心中仿佛有暴风雨正在肆虐一样的错觉。然而现在，必须优先集中于眼前的事情。那些事就留到日后慢慢思考。  
+“登录完毕。可以继续吗？”  
+真帆注视着画面向教授询问。  
+“嗯。”  
+雷斯吉宁教授没有丝毫犹豫。  
+“又不是删除『Amadeus』本体，快点结束吧。”  
+“……知道了。现在开始暂时删除『Amadeus』系统的全部连接程序。”  
 
+“没有那个必要。”  
+“诶？”  
+“砰——”  
+入口方向传来成年女性的声音，紧随其后的是一声爆破音。  
 
 <br/>
 
