人名更改： 雷耶斯 --> 莱耶斯

--- a/article/sg0/doc/0037.md
+++ b/article/sg0/doc/0037.md
@@ -1,6 +1,6 @@
 > <big> **私秘境里的圣痕 - 01** </big>  
 > 1.129954  
-> [ 2011/06/03 真帆视角 ] 真帆偷听雷耶斯和雷斯吉宁密谈被抓。  
+> [ 2011/06/03 真帆视角 ] 真帆偷听莱耶斯和雷斯吉宁密谈被抓。  
 
 时间已经过了晚上11点，维克多·孔多利亚大学内一片宁静。就研究室而言，因为经常有从深夜一直进行到早上的实验，所以并非完全没有人员的进出，但是相比白天来说还是相当的安静。因为走廊的照明已经关掉了，一个人走的话还是有些不安。真帆住在相邻的研究员用公寓。这天晚上，她在自己的房间里思考各种问题，脑子都快炸了。从房间正好能看到的“脑科学研究所”的窗子，这个时候还亮着灯。一定是雷斯吉宁教授还在那里吧，这样想着真帆用保温壶装了咖啡准备带过去。  
 （说起来，为什么我要执着于时间机器的研究呢……）  
@@ -168,16 +168,16 @@
 “谁？谁在那里！？”  
 正在真帆自言自语的时候，忽然，漆黑的走廊前方，传来女性的声音，吓得真帆停住了脚步。通道的灯一下子被点亮，从连接着隔壁研究所大楼的走廊，多名男女成列向这边走过来。隔壁的大楼，是【精神生理学研究所】。真帆所属的【脑科学研究所】，以大脑本身的机能研究为主。另一方面，【精神生理学研究所】，是关于脑活动带来的心理活动或者病理之类的，更接近医学的部分为专业的。  
 “不、不好意思，我是比屋定真帆，雷斯吉宁教授的研究室的。”  
-真帆认识走在最前面的女性，是所属于【精神生理学研究所】的雷耶斯教授。  
+真帆认识走在最前面的女性，是所属于【精神生理学研究所】的莱耶斯教授。  
 
 ![](../img/0037-1.png)
 
 “啊啦，原来是 *Maho* 嘛。”  
-“雷耶斯教授。这个时间还在工作吗？”  
+“莱耶斯教授。这个时间还在工作吗？”  
 “你也是？”  
 “是啊，嘛……”  
 “我们都是工作成瘾呢。”  
-朱蒂·雷耶斯教授眼镜后面的双眼眯起来，露出微笑。  
+朱蒂·莱耶斯教授眼镜后面的双眼眯起来，露出微笑。  
 “阿莱克西斯呢？还在自己的办公室吧？”  
 “是的，在做『Amadeus』的研究。”  
 “真是很执着呢。不知道是不是和自己的女儿搞混了？”  
@@ -185,9 +185,9 @@
 “这倒是不用。我的研究稍微遇到了点问题，想赶紧借用一下他的智慧呢。  
  就算你在场也并没有特别要拜托你的……  
  啊，无意冒犯。不过，谢谢啦。”  
-雷耶斯教授笑着说完后，穿过真帆身边走向雷斯吉宁教授的研究室，其他研究员们也陆续跟在后面。  
+莱耶斯教授笑着说完后，穿过真帆身边走向雷斯吉宁教授的研究室，其他研究员们也陆续跟在后面。  
 （研究上的问题……究竟是什么呢？）  
-仔细看了一下，真帆在同行的研究所人员中发现了一幅没见过的面孔。也说不清楚为什么会注意到那个人，该怎么描述呢——他，完全不像个学者。长期从事研究工作，能自然而然地感觉到相同的科研人员的气质。但是，那个男人明显散发出与周围完全不同的氛围，而且，对雷耶斯教授的态度也很不恭敬。如果是她研究室的人是绝对不会这样的做。另外，包括雷耶斯教授在内，其他的研究员全体都穿着白大褂，只有那个男人整整齐齐地穿着完全没有褶皱的西装。真帆总觉得不对劲。  
+仔细看了一下，真帆在同行的研究所人员中发现了一幅没见过的面孔。也说不清楚为什么会注意到那个人，该怎么描述呢——他，完全不像个学者。长期从事研究工作，能自然而然地感觉到相同的科研人员的气质。但是，那个男人明显散发出与周围完全不同的氛围，而且，对莱耶斯教授的态度也很不恭敬。如果是她研究室的人是绝对不会这样的做。另外，包括莱耶斯教授在内，其他的研究员全体都穿着白大褂，只有那个男人整整齐齐地穿着完全没有褶皱的西装。真帆总觉得不对劲。  
 本来快要回到自己房间的真帆，因为非常在意，就绕了回来，压低脚步声走向了雷斯吉宁的研究室。研究室的门微微开着，从那里能听到里面的谈话声。真帆知道这么做不对，但是还是把脸贴在门边，竖起了耳朵。  
 “——准备放任到什么时候？”  
 “那可是贵重的情报来源。鲁莽行动导致被废弃的话就可惜了吧。  
@@ -203,7 +203,7 @@
 
 ![](../img/0037-2.png)
 
-真帆心里想着或许逃跑会比较好，但是事与愿违，身体完全无法动弹。完全没有办法理解两位教授在说什么，即使被发现了，也只是傻傻地站在那里。不敢相信，也不想相信。这种情景，比悬疑电影都要神秘。这样想着，雷耶斯教授与一位同行的研究员一左一右架住真帆的双臂，牢牢地抓着，把她带进了房间。  
+真帆心里想着或许逃跑会比较好，但是事与愿违，身体完全无法动弹。完全没有办法理解两位教授在说什么，即使被发现了，也只是傻傻地站在那里。不敢相信，也不想相信。这种情景，比悬疑电影都要神秘。这样想着，莱耶斯教授与一位同行的研究员一左一右架住真帆的双臂，牢牢地抓着，把她带进了房间。  
 “教授……刚才说的……究竟是……”  
 雷斯吉宁教授带着略微悲伤的表情来到真帆面前，弯下庞大的身体，直视着真帆的脸。  
 “哎呀哎呀，被听到了啊……算了，正好。  
