--- a/article/sg0/doc/0060.md
+++ b/article/sg0/doc/0060.md
@@ -1,6 +1,6 @@
 > <big> **亡失流转的寂寥 - 10** </big>  
 > 1.064750  
-> [ 2010/12/20 ] 初见雷耶斯教授，跟踪者并不是她。真帆到LAB参观，冈伦继续拜托萌郁找人。冈伦厌恶自己对“红莉栖”的依存，依旧保持断联。  
+> [ 2010/12/20 ] 初见莱耶斯教授，跟踪者并不是她。真帆到LAB参观，冈伦继续拜托萌郁找人。冈伦厌恶自己对“红莉栖”的依存，依旧保持断联。  
 
 “……”  
 “冈伦，发生了什么事？”  
@@ -39,7 +39,7 @@
 “那么，这位是比屋定小姐的熟人吗？”  
 “对不起，因为我太着急了……”  
 “*I'm Judy, Judy Reyes. Pleasure meeting you, Mr.Okabe.*”  
-名为朱蒂·雷耶斯的女性带着太阳般灿烂的笑容伸出了右手。  
+名为朱蒂·莱耶斯的女性带着太阳般灿烂的笑容伸出了右手。  
 “啊，那个……奈斯凸……米特YO………”  
 “呵呵……说日语就行了。”  
 “诶？教授会说日语吗？”  
@@ -47,10 +47,10 @@
 “我都不知道呢……但是，为什么？”  
 “呵呵，女人到了我这个年纪的话，有很多情况的呢。”  
 她的日文发音相当地道，恶作剧般地抛媚眼也挺有模有样的。  
-“那么，重新自我介绍。朱蒂，朱蒂·雷耶斯。多多指教。”  
+“那么，重新自我介绍。朱蒂，朱蒂·莱耶斯。多多指教。”  
 我牢牢地握上了她再次伸出的手。  
 “我叫冈、冈部伦太郎。”  
-“雷耶斯教授，据说是为了出席这次将在日本召开的AI相关学会而来到了日本。”  
+“莱耶斯教授，据说是为了出席这次将在日本召开的AI相关学会而来到了日本。”  
 “你叫她教授的话，是维克多·孔多利亚大学的吗？”  
 “我研究的是 *Psycho physiology* 哦。”  
 “赛扣非……？”  
@@ -58,24 +58,24 @@
  从那个方面来讲，相比我们的研究，说是对人类更有帮助也不为过。”  
 “没有那样的事哦。你们的『Amadeus』依据今后的发展很有可能成为非常有用的技术。”  
 “您这样说我很荣幸。”  
-简单来说，就是来到日本的雷耶斯教授，偶然在秋叶原看到了比屋定，并猛地抱上去吓了她一跳，应该是这么一回事。  
-“但是，雷耶斯教授真是坏心，居然从车站一路跟踪过来。”  
+简单来说，就是来到日本的莱耶斯教授，偶然在秋叶原看到了比屋定，并猛地抱上去吓了她一跳，应该是这么一回事。  
+“但是，莱耶斯教授真是坏心，居然从车站一路跟踪过来。”  
 “跟踪？真帆？我吗？”  
 “嗯……你一直跟在我的后面吧……？”  
 “没那回事哦，我只是刚才在那边的店里偶然看到了你，想要吓你一跳而已哦。”  
 “诶？”  
-听了雷耶斯教授的回答，明明刚刚放下心了的比屋定又变了脸色。  
+听了莱耶斯教授的回答，明明刚刚放下心了的比屋定又变了脸色。  
 “比屋定小姐，被跟踪了吗？”  
 “嗯……的确是有这种感觉……”  
-“雷耶斯教授，有看到什么可疑的人物吗？”  
+“莱耶斯教授，有看到什么可疑的人物吗？”  
 “*hmmm……*”  
-雷耶斯教授用外国人特有的习惯动作，耸了耸肩表示否定。回头看向小巷子，当然没有类似的人影。  
+莱耶斯教授用外国人特有的习惯动作，耸了耸肩表示否定。回头看向小巷子，当然没有类似的人影。  
 “……那么，是我的错觉吗？”  
 “一定是那样的，日本可是世界治安第一的国家啊。”  
 是……么？
 “真帆，接下来有什么打算？”  
 “我……”  
-比屋定没有说出口，只是看着我。雷耶斯教授好像察觉到了什么。  
+比屋定没有说出口，只是看着我。莱耶斯教授好像察觉到了什么。  
 “嗯哼？原来如此，这么回事啊！那么，我先走了。伦太郎，之后找个机会聊聊吧。*Bye~！*”  
 她抛了个意味深长的媚眼之后离开了。不过走向了与车站相反的方向，没关系吧？话说，感觉又被奇妙地误会了的样子，不过一一总是反驳也嫌麻烦。  
 
