--- a/article/sg0/doc/0086.md
+++ b/article/sg0/doc/0086.md
@@ -1,6 +1,6 @@
 > <big> ** 存在证明的自动机械- 12** </big>  
 > 1.081163  
-> [ 2011/01/05 真帆视角 ] 逃跑过程中遇到教授，听从教授的安排来到临时办公室，打算删除『Amadeus』的连接程序。登录过程中从教授口中得知红莉栖也认为真帆是她的萨列里。即将删除时有个女人来袭。  
+> [ 2011/01/05 真帆视角 ] 逃跑遇到教授，听从教授安排到临时办公室，打算删除『Amadeus』的连接程序。过程中从教授口中得知红莉栖也认为真帆是她的萨列里。即将删除时有个女人袭击了他们。  
 
 比屋定真帆拼命地跑着。完全无法理解现状，但是从冈部不寻常的表现和逃走时听到的枪声，可以明白情况非常糟糕。她一边祈祷着冈部和真由理以及绹的平安，一边飞奔向菲莉丝的公寓。  
 “得赶快通知大家！”  
