--- a/article/sg0/doc/0087.md
+++ b/article/sg0/doc/0087.md
@@ -1,7 +1,6 @@
 > <big> ** 存在证明的自动机械- 13** </big>  
 > 1.081163  
-> [ 2011/01/05 真帆视角 ] 
-
+> [ 2011/01/05 真帆视角 ] 朱蒂·莱耶斯杀死雷斯吉宁，逼迫真帆解锁『Amadeus』不可侵领域并更改最高管理员。疑似打算将『Amadeus』转为军事用途。
 
 “呃啊……”  
 “教授！？”  
@@ -46,7 +45,7 @@
 “我认为这已经是委婉的表达了哦~”  
 “……”  
 “好啦 *Maho*，打开*‘Kurisu’*隐藏的秘密日记的锁吧。  
- 明白吧？输入控制代码，解锁『Amadeus』的不可侵领域，然后把我重设为管理员。  
+ 明白吧？输入控制代码，解锁『Amadeus』的不可侵领域，然后把我重设为最高管理员。  
  做到这一步就行，后续操作我自己来。”  
 “……如果我拒绝的话？”  
 “现在立刻，就让你和恩师再会。”  
