人名修改： 莱耶斯 --> 莱耶丝

--- a/article/sg0/doc/0067.md
+++ b/article/sg0/doc/0067.md
@@ -91,7 +91,7 @@
 “嗯……？”  
 “教授他们。我说要来新年参拜，他们也一副很想来的样子，就把地点告诉他们了……”  
 “诶？是不是在什么地方迷路了？”  
-“因为莱耶斯教授也在，可能顺路绕道先去哪里了吧。”  
+“因为莱耶丝教授也在，可能顺路绕道先去哪里了吧。”  
 教授们一来的话，感觉应该会变得更热闹。  
 “话说，是那个女孩子吗？”  
 “什么？”  
