--- a/article/sg0/doc/0068.md
+++ b/article/sg0/doc/0068.md
@@ -29,7 +29,7 @@
 ![](../img/0068-1.png)
 
 “*Where? Japanese shaman girl在哪, Rintaro?*”  
-雷斯吉宁教授和莱耶斯教授一脸悲痛地走了过来。  
+雷斯吉宁教授和莱耶丝教授一脸悲痛地走了过来。  
 “明明听真帆说，来这边就能见到 *Japanese shaman girl* 了呀，根本没有啊！”  
 “J、Japanese shaman girl?”  
 “是指<abbr title="雷斯吉宁他们理解中的“巫女”就是日本萨满少女">巫女</abbr>。”  
@@ -55,7 +55,7 @@
 “什……！”  
 “*I see……*”  
 “*Please come with me. I'll show you how to do.*”  
-雷斯吉宁教授和莱耶斯教授在琉华子的带领下前去参拜了。虽然觉得会不会有什么宗教问题，但既然他们本人都不介意的话，旁人也没什么好说吧。比起这些……  
+雷斯吉宁教授和莱耶丝教授在琉华子的带领下前去参拜了。虽然觉得会不会有什么宗教问题，但既然他们本人都不介意的话，旁人也没什么好说吧。比起这些……  
 “琉华子……好厉害啊……没想到英语说得那么好……”  
 “因为琉华君很聪明呢~”  
 是……这样子吗。  
