--- a/article/sg0/doc/0087.md
+++ b/article/sg0/doc/0087.md
@@ -1,17 +1,17 @@
 > <big> ** 存在证明的自动机械- 13** </big>  
 > 1.081163  
-> [ 2011/01/05 真帆视角 ] 朱蒂·莱耶斯杀死雷斯吉宁，逼迫真帆解锁『Amadeus』不可侵领域并更改最高管理员。疑似打算将『Amadeus』转为军事用途。
+> [ 2011/01/05 真帆视角 ] 朱蒂·莱耶丝杀死雷斯吉宁，逼迫真帆解锁『Amadeus』不可侵领域并更改最高管理员。疑似打算将『Amadeus』转为军事用途。  
 
 “呃啊……”  
 “教授！？”  
 真帆抬起头的时候，一切都结束了。雷斯吉宁教授倒在沙发上，一动不动，衣服上逐渐渗出着鲜血。不用确认也知道，他已经死了。  
 “怎、怎么会这样——”  
 “别动。”  
-“啊……！？莱耶斯…教授？”  
+“啊……！？莱耶丝…教授？”  
 “好久不见了啊，*Maho*。”  
 “什么？为什么……”  
 “说来话长，不过我也不打算说。如果让你知道了全部，就不得不杀掉你了哦。”  
-莱耶斯教授枪口对着真帆，微笑着。  
+莱耶丝教授枪口对着真帆，微笑着。  
 “这句话的意思，你能明白吧？”  
 “……意思是，我也可以选择不被杀的做法，是吧？”  
 “嗯~我喜欢聪明的孩子哦~”  
@@ -20,21 +20,21 @@
 
 这时，系统终于启动完成，“红莉栖”出现在屏幕中。  
 “嗯……？前辈，怎么了？”  
-不愧是“红莉栖”，只是看到真帆的表情就察觉到了气氛不妙。莱耶斯教授沉默地微笑着，真帆盯着对准她的枪口，回答“红莉栖”：  
+不愧是“红莉栖”，只是看到真帆的表情就察觉到了气氛不妙。莱耶丝教授沉默地微笑着，真帆盯着对准她的枪口，回答“红莉栖”：  
 “现在，大危机中……”  
 “……”  
 “把现在的情况告诉那孩子呀~”  
-“诶？这个声音，莱耶斯教授吗？”  
+“诶？这个声音，莱耶丝教授吗？”  
 “嗯，是我哟~”  
 真帆旋转桌面上的笔记本电脑，让屏幕上方的摄像头朝向门口方向。  
-“啊……！？莱耶斯教授，那把枪是……？”  
+“啊……！？莱耶丝教授，那把枪是……？”  
 “……雷斯吉宁教授被杀了，被这个女人。”  
 “什么！？”  
 “红莉栖”大惊失色  
-“……莱耶斯教授，你知道自己在干什么吗？你至今为止的职业生涯要毁于一旦了啊。”  
+“……莱耶丝教授，你知道自己在干什么吗？你至今为止的职业生涯要毁于一旦了啊。”  
 “凭大学的工资，有点担心自己的老年生活啊~你看，我也没有男人缘。  
  所以，就跳槽到能赚更多钱的单位咯~”  
-听到这里，真帆明白了莱耶斯的目的。  
+听到这里，真帆明白了莱耶丝的目的。  
 “你，想将『Amadeus』转为军事用途吧……！？”  
 “啊……！”  
 “我不会回答的哦。我都说了，全都知道了的话，就不得不杀掉你了。”  
@@ -49,7 +49,7 @@
  做到这一步就行，后续操作我自己来。”  
 “……如果我拒绝的话？”  
 “现在立刻，就让你和恩师再会。”  
-莱耶斯用枪指了指沙发上的教授遗体。  
+莱耶丝用枪指了指沙发上的教授遗体。  
 “谁能保证，在我输入控制代码后，你不会开枪？”  
 “那就看你信不信任我咯~  
  不过我可以告诉你，我现在的老板需要一个『Amadeus』的维护员。  
@@ -101,10 +101,10 @@
 【『Amadeus』核心框架再启动准备完成。】  
 【继续处理。】  
 【接下来开始认证新最高管理权限持有者。请输入。】  
-真帆把视线转向莱耶斯。  
+真帆把视线转向莱耶丝。  
 “是我……哟。”  
 【确认声纹——确认完成。】  
-【维克多·孔多利亚大学，精神生理学研究所所属，朱蒂·莱耶斯教授。】  
+【维克多·孔多利亚大学，精神生理学研究所所属，朱蒂·莱耶丝教授。】  
 【登录为新最高管理权限持有者。】  
 【确认登录——确认完成。管理者权限已更新。】  
 “*Y——YES!!*”
