--- a/article/sg0/doc/0086.md
+++ b/article/sg0/doc/0086.md
@@ -92,7 +92,7 @@
 “嗯……”  
 “*Hum……*听你这么说我想起来了。*Kurisu* 以前也说过同样的话。”  
 “诶！？红莉栖吗？怎么说的？”  
-“有一天，我得知了Amadeus有‘被神爱者’意思，于是对 *Kurisu* 说：  
+“有一天，我得知了 *Amadeus* 有‘被神爱者’意思，于是对 *Kurisu* 说：  
  ‘你正是 *Amadeus* 啊。’  
  然后，她微笑着回答道： 
  ‘如果我是 *Amadeus* 的话——*Salieri* 就是真帆前辈呢。”  
