--- a/article/sg0/doc/0087.md
+++ b/article/sg0/doc/0087.md
@@ -97,7 +97,7 @@
 【确认停止——确认完成。】  
 【停止模拟听觉神经回路系统机能。】  
 【检查确认——确认完成。】  
-“红莉栖”无感情地读着系统信息，同时控制台不断刷新着一排排令人眼花缭乱的字符串。  
+“红莉栖”用机械的声音无感情地读出系统信息，同时控制台不断刷新着一排排令人眼花缭乱的字符串。  
 【『Amadeus』核心框架再启动准备完成。】  
 【继续处理。】  
 【接下来开始认证新最高管理权限持有者。请输入。】  
