--- a/article/sg0/doc/0089.md
+++ b/article/sg0/doc/0089.md
@@ -1,6 +1,6 @@
 ## 存在证明的自动机械- 15
 > 1.081163  
-> [ 2011/01/05 真帆视角 ] 原来“红莉栖”之前是配合真帆装作被控制，戏耍了莱耶丝。真帆和萌郁趁机控制住了莱耶丝。然而莱耶丝狡猾
+> [ 2011/01/05 真帆视角 ] 原来“红莉栖”之前是配合真帆装作被控制，戏耍了莱耶丝。真帆和萌郁趁机控制住了莱耶丝。然而莱耶丝狡猾地扭转了局势。被逼无奈之下，为救真帆，Rounder萌郁竟然输入了『Amadeus』控制代码的。  
 
 二人放轻脚步声，回到了临时办公室，通过打开着的门缝，窥探着里面的情况。现在莱耶丝还留在那里，刚好『Amadeus』的重启倒计时也差不多结束了。  
 “不阻止的话——”  
