--- a/article/sg0/doc/0030.md
+++ b/article/sg0/doc/0030.md
@@ -1,4 +1,4 @@
-> <big> **永劫回归的潘多拉 - 03** </big>  
+## 永劫回归的潘多拉 - 03
 > 1.129954  
 > [ 2011/01/21 ] 冈伦回归原本的世界线，当天随众人一起去探望吹雪，确认其Reading·Steiner能力并告知简要情报。  
 
