--- a/article/sg0/doc/0036.md
+++ b/article/sg0/doc/0036.md
@@ -1,4 +1,4 @@
-> <big> **永劫回归的潘多拉 - 09α** </big>  
+## 永劫回归的潘多拉 - 09α
 > 1.129954  
 > [ 2011/01/23 - 01/26 ] 接0035 - 接起电话。发现并躲开黑衣人。事后在菲莉丝住所，冈伦与真帆交流中钵论文的红莉栖原稿与『Amadeus』军用化情况。真帆和教授回国，继续让冈伦担任测试员。  
 
