--- a/article/sg0/doc/0047.md
+++ b/article/sg0/doc/0047.md
@@ -1,4 +1,4 @@
-> <big> **私秘境里的圣痕 - 11** </big>  
+## 私秘境里的圣痕 - 11
 > 1.143688  
 > [ 2011/07/07 真帆视角（下）] 真帆对“红莉栖”表达了嫉妒的负面情感；战争爆发，时间机器被破坏，真由理失踪；“红莉栖”确认被监听，舍身帮助真帆（洗脑）与篝（狂暴）救出冈伦。  
 
