--- a/article/sg0/doc/0051.md
+++ b/article/sg0/doc/0051.md
@@ -1,4 +1,4 @@
-> <big> **亡失流转的寂寥 - 01** </big>  
+## 亡失流转的寂寥 - 01
 > 1.064750  
 > [ 2010/12/15 ] 疑似世界线变动。与“红莉栖”打电话确认却被告知之前回了电话道歉，其他方面与记忆基本一致。强行说服自己只是错觉。  
 
