--- a/article/sg0/doc/0054.md
+++ b/article/sg0/doc/0054.md
@@ -1,4 +1,4 @@
-> <big> **亡失流转的寂寥 - 04** </big>  
+## 亡失流转的寂寥 - 04
 > 1.064750  
 > [ 2010/12/15 ] 铃羽分享篝失踪情报，冈伦桶子帮忙。真由理准备圣诞派对。冈伦开始察觉自己逐渐“红莉栖”当真人。  
 
