--- a/article/sg0/doc/0072.md
+++ b/article/sg0/doc/0072.md
@@ -1,4 +1,4 @@
-> <big> **轨道秩序的日蚀 - 10** </big>  
+## 轨道秩序的日蚀 - 10
 > 1.064750  
 > [ 2011/01/02 ] 冈伦查看萌郁手臂排除其嫌疑。随后与天王寺交涉，道破其身份，以铃羽、篝二人在店里打工交换他关照二人，达成合作。发现神秘代号K6205，袭击者可能来自西方军队。  
 
