--- a/article/sg0/doc/0073.md
+++ b/article/sg0/doc/0073.md
@@ -1,4 +1,4 @@
-> <big> **轨道秩序的日蚀 - 11** </big>  
+## 轨道秩序的日蚀 - 11
 > 1.064750  
 > [ 2011/01/02 ] 众人聚集商量对策。由季还要继续打工，被冈伦发现左手手腕受伤。冈伦怀疑K6205与莫扎特有关。联系真帆发现『Amadeus』疑似被挟持。这时冈伦接到“红莉栖”电话。P3：是否接起电话。  
 
