--- a/article/sg0/doc/0080.md
+++ b/article/sg0/doc/0080.md
@@ -1,4 +1,4 @@
-> <big> ** 存在证明的自动机械- 06** </big>  
+## 存在证明的自动机械- 06
 > 1.081163  
 > [ 2011/01/04 真帆视角 ] 通过莫扎特的钢琴曲回忆起和红莉栖成为朋友的契机。“死亡意味着不能再听莫扎特了。”真帆隐约想起有件事情很重要，一定要想起来，与自己在红莉栖去世一个月后决定使用的用户名Salieri有关。  
 
