--- a/article/sg0/doc/0081.md
+++ b/article/sg0/doc/0081.md
@@ -1,4 +1,4 @@
-> <big> ** 存在证明的自动机械- 07** </big>  
+## 存在证明的自动机械- 07
 > 1.081163  
 > [ 2011/01/04 真帆视角 ] 真帆帮萌郁打伞方便她拍照。真帆、菲莉丝、萌郁三人开深夜女子会加深感情。聊到人工智能未来，萌郁认为自己会被取代，真帆受到触动表达不会给更优秀的人或AI让出位置，我就是我，鼓励了萌郁。  
 
