--- a/article/sg0/doc/0082.md
+++ b/article/sg0/doc/0082.md
@@ -1,4 +1,4 @@
-> <big> ** 存在证明的自动机械- 08** </big>  
+## 存在证明的自动机械- 08
 > 1.081163  
 > [ 2011/01/05 ] 真帆和萌郁的房间已经乱到极致，菲莉丝求助、黑木崩溃。冈伦和真由理决定帮忙清扫。真由理提出要请“清扫军曹”。  
 
