--- a/article/sg0/doc/0085.md
+++ b/article/sg0/doc/0085.md
@@ -1,4 +1,4 @@
-> <big> ** 存在证明的自动机械- 11** </big>  
+## 存在证明的自动机械- 11
 > 1.081163  
 > [ 2011/01/05 ] 送绹回显像管工房的路上遇袭，真帆独自逃跑。幸得天王寺解救。穿黑色骑手装的女人基本可以排除是萌郁的可能。  
 
