--- a/article/sg0/doc/0087.md
+++ b/article/sg0/doc/0087.md
@@ -1,4 +1,4 @@
-> <big> ** 存在证明的自动机械- 13** </big>  
+## 存在证明的自动机械- 13
 > 1.081163  
 > [ 2011/01/05 真帆视角 ] 朱蒂·莱耶丝杀死雷斯吉宁，逼迫真帆解锁『Amadeus』不可侵领域并更改最高管理员。疑似打算将『Amadeus』转为军事用途。  
 
@@ -52,7 +52,7 @@
 莱耶丝用枪指了指沙发上的教授遗体。  
 “谁能保证，在我输入控制代码后，你不会开枪？”  
 “那就看你信不信任我咯~  
- 不过我可以告诉你，我现在的老板需要一个『Amadeus』的维护员。  
+ 不过我可以告诉你，我现在的老板需要一个『Amadeus』的维护人员。  
  如果你有跳槽的打算，我可以帮你介绍。”  
 “……”  
 真帆难过地看向笔记本屏幕。“红莉栖”也是一幅担心的表情。  
@@ -73,7 +73,7 @@
 
 “红莉栖”变得面无表情，同时背景变成一片红色。  
 【确认声纹——确认完成。】  
-【最高权限持有者，比屋定真帆。】  
+【最高管理权限持有者——比屋定真帆。】  
 【对所接收旋律密码与数据库进行比对。】  
 【确认比对——确认完成。】  
 【该旋律密码为第555号指令脚本的启动命令。】  
@@ -97,7 +97,7 @@
 【确认停止——确认完成。】  
 【停止模拟听觉神经回路系统机能。】  
 【检查确认——确认完成。】  
-“红莉栖”用机械的声音无感情地读出系统信息，同时控制台不断刷新着一排排令人眼花缭乱的字符串。  
+“红莉栖”用机械的声音无感情地读出系统信息，同时控制台窗口不断刷新着一排排令人眼花缭乱的字符串。  
 【『Amadeus』核心框架再启动准备完成。】  
 【继续处理。】  
 【接下来开始认证新最高管理权限持有者。请输入。】  
