--- a/article/sg0/doc/0088.md
+++ b/article/sg0/doc/0088.md
@@ -1,4 +1,4 @@
-> <big> ** 存在证明的自动机械- 14** </big>  
+## 存在证明的自动机械- 14
 > 1.081163  
 > [ 2011/01/05 真帆视角 ] 萌郁来救真帆。途中萌郁告诉真帆萨列里从未嫉妒莫扎特，两人是相互尊敬。真帆重新理解了对红莉栖的感情，决定回去救“红莉栖”。  
 
@@ -12,7 +12,7 @@
 真帆乖乖地举起手。  
 “对，这样才对。  
  我会按照约定把你介绍给老板的。  
- 就说这是一位非常适合担任『Amadeus』维护员的优秀科学家。  
+ 就说这是一位非常适合担任『Amadeus』维护人员的优秀科学家。  
  然后老板一定会这么说：  
  ‘喂喂朱蒂，就算再怎么优秀，死人可写不了代码吧？’”  
 “你……!没有一点作为人的良心吗！”  
