--- a/article/sg0/doc/0000.md
+++ b/article/sg0/doc/0000.md
@@ -1,9 +1,9 @@
-# <center> 命运石之门0 游戏文本 </center>
-## <center>STEINS;GATE 0 game text </center>
+# 命运石之门0 游戏文本
+# STEINS;GATE 0
 
 ![](../img/0000-1.png)
 
-> <big> **楔子** </big>  
+## 楔子
 > 1.129848  
 > [ 2010/07/28 ] 接动漫 *23β* 话，冈伦误杀红莉栖后。  
 
@@ -126,13 +126,3 @@
 ---
 
 | ←prev | [home](../../) | [next→](./0001) |
-
-<!--
-<table style="width:100%">
-<tr>
-    <td style="width:33%"> <a href="./000"> ←previous </a> </td>
-    <td style="width:34%"> <a href="../../"> home </a> </td>
-    <td style="width:33%"> <a href="./001"> next→ </a> </td>
-</tr>
-</table>
--->
