--- a/article/sg0/doc/0002.md
+++ b/article/sg0/doc/0002.md
@@ -1,8 +1,8 @@
-> <big> **零化域的缺失之环 - 02** </big>  
+## 零化域的缺失之环 - 02
 > 1.129848  
 > [ 2010/11/23 ] 研讨会前半程，红莉栖论文被质疑，冈伦爆发。  
 
-平复心情的时候接到了真由理的***RINE***。  
+平复心情的时候接到了真由理的 **RINE**。  
 这是最近才火起来的一种即时通讯软件，比邮件更加方便，所以用的人很多。  
 『嘟嘟噜~♪冈伦~研讨会的准备还顺利吗？』  
 「啊啊，没问题」  
