--- a/article/sg0/doc/0017.md
+++ b/article/sg0/doc/0017.md
@@ -1,4 +1,4 @@
-> <big> **闭时曲线的碑文 - 12** </big>  
+## 闭时曲线的碑文 - 12
 > 1.129848  
 > [ 2010/12/15 ] 第一次测试报告前，冈伦在神社与“红莉栖”聊天，了解其记忆机理。在被追问“克里斯蒂娜”时差点混淆其与本体，冈伦醒觉自己不应该这样于是挂断电话。P1：是否关机拒绝“红莉栖”的回电？  
 
