--- a/article/sg0/doc/0019.md
+++ b/article/sg0/doc/0019.md
@@ -1,4 +1,4 @@
-> <big> **双体福音的契约 - 01** </big>  
+## 双体福音的契约 - 01
 > 1.129848  
 > [ 2010/12/15 ] 第一次测试报告，冈伦放弃测试员身份，暂时保留登录权限。与真帆聊起红莉栖死后发生的异常事件，真帆想要了解真相被搪塞。  
 
