--- a/article/sg0/doc/0049.md
+++ b/article/sg0/doc/0049.md
@@ -1,4 +1,4 @@
-> <big> **瓦尔基里终末报告 - 01** </big>  
+## 瓦尔基里终末报告 - 01
 > 1.143688  
 > [ 2036/08/13 ] 
 
@@ -18,7 +18,7 @@ STEINS;GATE达成条件未探明。
   - 若拯救行动失败，则之后行动核心为唤醒No.001使其重新振作。  
 - 尝试回避20■■/■■/■■秋叶原冲突导致的人员失散与V204破坏。  
 
-<div align="right"> ——No.002 巴莱尔·提托 </div>  
+<p align="right"> ——No.002 巴莱尔·提托 </p>  
 
 （我一个人没办法弄懂如何到达STEINS;GATE。我能做的只有复现我所知道的历史达成闭环，让希望不会断绝。我相信，凤凰院凶真一定迟早有一天会和我们一起……不，不对，是站在我们的前阵，指引我们。）  
 
@@ -28,7 +28,7 @@ STEINS;GATE达成条件未探明。
 
 <br/>
 
-> (Hope is always there in the “future”.)
+> Hope is always there in the “future”.
 ---
 
 | [←prev](./0048) | [home](../../) | [next→](./0050) |
