--- a/article/sg0/doc/0060.md
+++ b/article/sg0/doc/0060.md
@@ -1,4 +1,4 @@
-> <big> **亡失流转的寂寥 - 10** </big>  
+## 亡失流转的寂寥 - 10
 > 1.064750  
 > [ 2010/12/20 ] 初见莱耶丝教授，跟踪者并不是她。真帆到LAB参观，冈伦继续拜托萌郁找人。冈伦厌恶自己对“红莉栖”的依存，依旧保持断联。  
 
