--- a/article/sg0/doc/0061.md
+++ b/article/sg0/doc/0061.md
@@ -1,4 +1,4 @@
-> <big> **亡失流转的寂寥 - 11** </big>  
+## 亡失流转的寂寥 - 11
 > 1.064750  
 > [ 2010/12/23 ] 圣诞节不办派对了，改为新年派对。琉华子带陌生失忆女性来LAB找冈伦求助，女性长得非常像红莉栖。  
 
