--- a/article/sg0/doc/0074.md
+++ b/article/sg0/doc/0074.md
@@ -1,4 +1,4 @@
-> <big> ** 存在证明的自动机械 - 00** </big>  
+## 存在证明的自动机械 - 00
 > 1.081163  
 > [ 2011/01/02 ] 接0073 - 再想一下。真帆的内心独白。阿马德乌斯和萨列里；红莉栖和我自己；这两组对我而言是具有特别意义的对应。  
 
