--- a/article/sg0/doc/0084.md
+++ b/article/sg0/doc/0084.md
@@ -1,4 +1,4 @@
-> <big> ** 存在证明的自动机械- 10** </big>  
+## 存在证明的自动机械- 10
 > 1.081163  
 > [ 2011/01/05 ] 扫除结束后。大家庆功宴，枫弹奏K331第三乐章《土耳其进行曲》，勾起真帆的情绪。冈伦听她讲述了她对红莉栖，类似于萨列里对莫扎特的感情。同时发现萌郁格外关心真帆。  
 
