--- a/article/sg0/doc/0086.md
+++ b/article/sg0/doc/0086.md
@@ -1,4 +1,4 @@
-> <big> ** 存在证明的自动机械- 12** </big>  
+## 存在证明的自动机械- 12
 > 1.081163  
 > [ 2011/01/05 真帆视角 ] 逃跑遇到教授，听从教授安排到临时办公室，打算删除『Amadeus』的连接程序。过程中从教授口中得知红莉栖也认为真帆是她的萨列里。即将删除时有个女人袭击了他们。  
 
