--- a/article/sg0/doc/0049.md
+++ b/article/sg0/doc/0049.md
@@ -2,11 +2,11 @@
 > 1.143688  
 > [ 2036/08/13 ] 
 
-|时间：| 2036/08/13 |  
-|世界线变动率：| ■■■■■■■■（无法测定） |  
-|主要作战成员：| 巴莱尔·提托，咲村，柴郡猫，约翰·提托 |  
+| 报告撰写时间 | 2036/08/13 |  
+| 世界线变动率 | ■■■■■■■■（无法测定） |  
+| 主要作战成员 | 巴莱尔·提托，咲村，柴郡猫，约翰·提托 |  
 
-No.001依旧处于沉睡状态，本体一直处于STARTFO监管下，与2025年去世；  
+No.001依旧处于沉睡状态，与2025年去世；  
 No.003自2011年失踪，至今下落不明；  
 STEINS;GATE达成条件未探明。  
 
