--- a/article/sg0/doc/0091.md
+++ b/article/sg0/doc/0091.md
@@ -64,7 +64,7 @@
 真帆反射性地想对红莉栖道歉。虽然自己也不知道为什么，但是还是想要道歉。在真正即将离别的最后的一瞬间，她差点想要脱口而出的，是对红莉栖的道歉。但是，看着红莉栖的笑容，真帆把话咽了回去。真帆明白，那个笑容就是回复。无论饱含了怎样情感，两人之间不需要那些言语。  
 “我相信你。相信……毫无根据，对于科学家来说是个不太合适的词呢。”  
 真帆竭尽全力地逞强。要和那个傲慢的、自己最喜欢的后辈分别，必须要这样。这是两人在研究室的时候，不知道往来了多少次的做法。  
-“坚信答案一定存在，然后不断迈进，这才是科学家应有的姿态哟。”  
+“坚信答案一定存在，然后不断前进，这才是科学家应有的姿态哟。”  
 “哈哈……”  
 “嘿嘿嘿……”  
 多么怀念，难以割舍。红莉栖去世后只过了几个月，有时感觉很久远像是好些年前，有时又仿佛发生在昨天。  
