--- a/article/sg0/doc/0032.md
+++ b/article/sg0/doc/0032.md
@@ -14,7 +14,7 @@
 “没事没事。之前也说过的吧，无论如何依赖爸爸都没有关系DaZe~”  
 “嗯……”  
 夜晚的寒气，从敞开的时间机器舱门那里潜入进来。铃羽和桶子说话时的气息全都变成了白色的雾气。机器里寂静无声。使用舱内的生命维持装置的话，就可以不用忍受寒冷了，但是铃羽不想把电源浪费在这里。铃羽用戴着手套的手摩擦自己的脸颊。从由季那里得到的手套非常暖和，全身上下只有手感觉热乎乎的。  
-“我相信啊，冈伦一定迟早有一天会和我们一起……  
+“我相信啊，冈伦迟早有一天一定会和我们一起……  
  不，不对，是站在我们的前阵，指引我们。  
  我相信这一点哦。”  
 “……？”  
