--- a/article/sg0/doc/0045.md
+++ b/article/sg0/doc/0045.md
@@ -17,11 +17,7 @@
 伴随着脚步声，昏暗的灯光下浮现出一个巨大的身影。我记得那个声音。  
 “诶……？雷斯吉宁……教授……？”  
 “感觉怎么样？要是口渴的话，我会让人准备水的。”  
-仔细一看，在场的并不只有雷斯吉宁教授一人。他的身后，数位身着黑色西装的男人一言不发地伫立，紧紧地盯着我。所有人都拿着手枪。他们那类似
-<abbr title = "Men In Black。参见电影黑衣人">
-MIB
-</abbr>
-的打扮，让我回想起半年前在桶子的店里遭遇的那群外国人。或者说，这跟那时候的是同一群人？  
+仔细一看，在场的并不只有雷斯吉宁教授一人。他的身后，数位身着黑色西装的男人一言不发地伫立，紧紧地盯着我。所有人都拿着手枪。他们那类似电影《黑衣人》中的打扮，让我回想起半年前在桶子的店里遭遇的那群外国人。或者说，这跟那时候的是同一群人？  
 “这……究竟是……”  
 虽然有成堆的问题想问，但首先无法理解的是，为何雷斯吉宁教授看到我现在的处境却没有伸出援手。当然，最恰当的答案显而易见——把我关在这里的，就是雷斯吉宁教授本人，真帆是听从教授的指示把我捉住。然而，我并不愿相信这个事实。  
 “这里…究竟是哪儿……？”  
@@ -126,7 +122,7 @@ NSC
 “确实是这样！  
  时间机器比核武器更加精密纤细。  
  正因如此，你的——你们的能力是必要的。  
- 记得你是称呼它为‘*Reading·Steiner*’吧？  
+ 记得你是称呼它为 ‘*Reading·Steiner*’ 吧？  
  看样子和新型脑炎的症状基本相同。”  
 “……！”
 对了，雷斯吉宁正在进行关于新型脑炎的研究。  
@@ -134,7 +130,7 @@ NSC
  我们是这么猜想的，只是一直在追寻确凿的证据。  
  全世界的情报机构同样也在竭力调查。”  
 “啊……！”  
-事情发展到这种地步，对于完全没有想过这种可能性悔恨不已。所谓的新型脑炎患者，明明没有生病，但是要集中接受无意义的治疗——我之前一直是这么想的。然而这种想法太过天真，太过幼稚了。雷斯吉宁他们的目的只是把*Reading·Steiner* 持有者聚集起来，从而进行研究……！  
+事情发展到这种地步，对于完全没有想过这种可能性悔恨不已。所谓的新型脑炎患者，明明没有生病，但是要集中接受无意义的治疗——我之前一直是这么想的。然而这种想法太过天真，太过幼稚了。雷斯吉宁他们的目的只是把 *Reading·Steiner* 持有者聚集起来，从而进行研究……！  
 “刚才，我从 *Maho* 那详细地听取了你那异于常人的能力。  
  本来，只是想从你那获取 *Kurisu* 遗失的成果。  
  没想到连新型脑炎的情报也……！你实在是太棒了哟！  
@@ -155,7 +151,7 @@ NSC
 “你，你这家伙……疯了！”  
 我在此刻第一次感受到，眼前的男人是如此的让人恶心——同时也感到恐怖。  
 完全无法相信，眼前的人和我之前无比尊敬的人竟然是同一个人。  
-“如果研究透了*Reading·Steiner* 持有者的大脑，应该能有更多地发现吧。  
+“如果研究透了 *Reading·Steiner* 持有者的大脑，应该能有更多地发现吧。  
  然后把它和时间机器配套卖出去，就能完美地保持世界的军事平衡。  
  同时也能避免战争。也请你务必提供协助。”  
 雷斯吉宁一边说着如此恐怖的事情，神态却一如往常。他以真帆数落他时所说的“顽皮的孩子”的那种天真感，很开心地畅谈着疯狂的计划。  
