--- a/article/sg0/doc/0047.md
+++ b/article/sg0/doc/0047.md
@@ -103,7 +103,7 @@
  所以，请帮帮我……！求你了……！”  
 “啊……前辈居然会向我求助……”  
 “红莉栖”瞪大了眼睛。没错，至今为止出于作为前辈的自尊心，真帆尽量避免向红莉栖寻求帮助。这一点即使是对“红莉栖”也没有改变。如果真帆求助，按照红莉栖的性格，一定会竭尽全力提供帮助的。  
-“呐，请告诉我……  如果是你的话，一定会有解决办法的吧？”  
+“呐，请告诉我……如果是你的话，一定会有解决办法的吧？”  
 牧濑红莉栖才被称为天才。她是一位化不可能为可能的科学家。  
 真帆等待着红莉栖的回答。最后的希望。潘多拉魔盒里最后留下的东西。她期待着红莉栖能够给出答案。  
 然而——  
@@ -141,7 +141,7 @@
 “后果有三种：  
  把我的数据从服务器分离出来并加以隔离……  
  或者用老版本的记忆数据覆盖掉现在的数据。  
- 最坏的情况是我本身会被消除吧。”  
+ 最坏的情况是我本身会被删除吧。”  
 “怎么会……！”  
 “没事的。因为你是那种，一定会靠自己重新振作起来的人。”  
 “我怎么样都无所谓，我是在担心你啊！”  
@@ -171,7 +171,7 @@
 “我虽然不知道……但是马上，我那可爱的后辈会查出来告诉我的。”  
 因为她说过，让我相信她。牧濑红莉栖绝对不会辜负这句话。  
 “叮叮！”  
-刚走出广播会馆，RINE就收到了短信。现在枪声还在持续着。真帆一边快速撤离此地，一边检查着邮件。  
+刚走出广播会馆就收到了RINE。现在枪声还在持续着。真帆一边快速撤离此地，一边查看消息。  
 
 『冈部在电机大学的地下  
  我也是第一次知道  
