--- a/article/sg0/doc/0048.md
+++ b/article/sg0/doc/0048.md
@@ -1,6 +1,6 @@
 ## 私秘境里的圣痕 - 12 （冈伦结局）
 > 1.143688  
-> [ 2011/07/08 ] 冈伦被救出；篝去世，『Amadeus』被消除；桶子、菲莉丝、琉华逃亡；真由理、铃羽、真帆失踪。冈伦放弃之下，桶子决心造出时间机器。  
+> [ 2011/07/08 ] 冈伦被救出；篝去世，『Amadeus』被删除；桶子、菲莉丝、琉华逃亡；真由理、铃羽、真帆失踪。冈伦放弃之下，桶子决心造出时间机器。  
 
 “冈……”  
 有声音。  
@@ -21,7 +21,7 @@
  我和篝小姐，为了救你闯进了STRATFO的基地……  
  篝小姐……在那里牺牲了……也拉了不少人垫背……  
  只是，雷斯吉宁教授逃掉了……  
- 『Amadeus』也被消除了……  
+ 『Amadeus』也被删除了……  
  这些事不该发生的……  
  不过，现在，你是唯一的希望。  
  求求你。虽然知道把一切托付给你一个人很过分……  
