--- a/article/sg0/doc/0049.md
+++ b/article/sg0/doc/0049.md
@@ -5,22 +5,24 @@
 | 报告撰写时间 | 2036/08/13 |  
 | 世界线变动率 | ■■■■■■■■（无法测定） |  
 | 主要作战成员 | 巴莱尔·提托，咲村，柴郡猫，约翰·提托 |  
+|  | No.001未觉醒，于2025年去世。 |  
+|  | No.003自2011年失踪，至今下落不明 |  
 
-No.001依旧处于沉睡状态，与2025年去世；  
-No.003自2011年失踪，至今下落不明；  
-STEINS;GATE达成条件未探明。  
+## STEINS;GATE 到达条件
+- 【关联性未判明】《中钵论文》——大战导火索。  
+- 【关联性未判明】『Amadeus』——被“教授”监听，已被删除。  
+- 【关联性未判明】红莉栖笔记本电脑和硬盘——未解锁。  
 
----
-最终作战概要  
+### 最终作战概要
 执行人：约翰·提托  
-- 乘坐V204 2nd EDITION ver2.31前往分歧点19■■/■■/■■寻找■■■5100；  
-- 乘坐V204前往分歧点20■■/■■/■■告知No.001相关情报并协助其拯救■■■■■；  
-  - 若拯救行动失败，则之后行动核心为唤醒No.001使其重新振作。  
+- 乘坐V204 2nd EDITION ver2.31前往分歧点19■■/■■/■■寻找■■■5100。  
+- 乘坐V204前往分歧点20■■/■■/■■告知No.001相关情报并协助其拯救■■■■■。  
+- 注意『Amadeus』，防止情报泄露。  
 - 尝试回避20■■/■■/■■秋叶原冲突导致的人员失散与V204破坏。  
 
-<p align="right"> ——No.002 巴莱尔·提托 </p>  
+<span align="right"> ——No.002 巴莱尔·提托 </span>  
 
-（我一个人没办法弄懂如何到达STEINS;GATE。我能做的只有复现我所知道的历史达成闭环，让希望不会断绝。我相信，凤凰院凶真一定迟早有一天会和我们一起……不，不对，是站在我们的前阵，指引我们。）  
+（我相信，凤凰院凶真迟早有一天一定会和我们一起……不，不对，是站在我们的前阵，指引我们。）  
 
 
 ![](../img/0049-1.png)
