--- a/article/sg0/doc/0092.md
+++ b/article/sg0/doc/0092.md
@@ -1,8 +1,9 @@
 ## 存在证明的自动机械- 18 （真帆结局）
 > 1.081163  
-> [ 2011/01/31 真帆视角 ] 
-> 
-![Alt text]（../img/0092-1.png）
+> [ 2011/01/31 真帆视角 ] 真帆从冈伦处了解到全部真相，准备回美国继续红莉栖的研究。  
+
+![](../img/0092-1.png)
+
 “尊敬的各位旅客，本次航班即将起飞，请系好安全带。”  
 “……”  
 “这位乘客。”  
