--- a/article/sg0/doc/0092.md
+++ b/article/sg0/doc/0092.md
@@ -74,4 +74,4 @@
 > （to be continued）
 ---
 
-| [←prev]（./0091） | [home]（../../） | [next→]（./0093） |
+| [←prev](./0090) | [home](../../) | [next→](./0092) |
