update Valkyrie Report

--- a/article/sg0/doc/0049.md
+++ b/article/sg0/doc/0049.md
@@ -1,4 +1,4 @@
-## 瓦尔基里终末报告 - 01
+## 瓦尔基里最终报告 - 01
 > 1.143688  
 > [ 2036/08/13 ] 
 
@@ -8,7 +8,7 @@
 |  | No.001未觉醒，于2025年去世。 |  
 |  | No.003自2011年失踪，至今下落不明 |  
 
-## STEINS;GATE 到达条件
+### STEINS;GATE 到达条件
 - 【关联性未判明】《中钵论文》——大战导火索。  
 - 【关联性未判明】『Amadeus』——被“教授”监听，已被删除。  
 - 【关联性未判明】红莉栖笔记本电脑和硬盘——未解锁。  
@@ -20,7 +20,7 @@
 - 注意『Amadeus』，防止情报泄露。  
 - 尝试回避20■■/■■/■■秋叶原冲突导致的人员失散与V204破坏。  
 
-<span align="right"> ——No.002 巴莱尔·提托 </span>  
+<p align="right"> ——No.002 巴莱尔·提托 </p>  
 
 （我相信，凤凰院凶真迟早有一天一定会和我们一起……不，不对，是站在我们的前阵，指引我们。）  
 
