--- a/article/sg0/doc/0093.md
+++ b/article/sg0/doc/0093.md
@@ -1,4 +1,4 @@
-## 瓦尔基里终末报告 - 02
+## 瓦尔基里最终报告 - 02
 > 1.081163  
 > [ 2036/08/13 ] 
 
@@ -7,7 +7,7 @@
 | 主要作战成员 | 织女星，巴莱尔·提托，咲村，柴郡猫，约翰·提托，KURISU |  
 |  | No.001未觉醒，于2025年去世。|  
 
-## STEINS;GATE 到达条件
+### STEINS;GATE 到达条件
 - 【关联性未判明】《中钵论文》——大战导火索。  
 - 【关联性未判明】『Amadeus』——不同势力争夺，已被删除。  
 - 【关联性未判明】 红莉栖笔记本电脑和硬盘——已解锁，其中有关于■■■■的论文。  
@@ -19,7 +19,7 @@
 - 注意保护『Amadeus』。  
 - 注意保护红莉栖笔记本电脑和硬盘。  
 
-<span align="right"> ——No.009 KURISU </span>  
+<p align="right"> ——No.009 KURISU </p>  
 
 （不知道什么时候能见到那位凤凰院凶真先生呢？）  
 
